sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/feedback__c.field-meta.xml
<CustomField>
    <fullName>feedback__c</fullName>
    <label>feedback</label>
    <type>TextArea</type>
</CustomField>