sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/final_resolution__c.field-meta.xml
<CustomField>
    <fullName>final_resolution__c</fullName>
    <label>final resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Not an Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>