sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/FLO_Account__c.field-meta.xml
<CustomField>
    <fullName>FLO_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FLOs Account</description>
    <inlineHelpText>FLOs Account</inlineHelpText>
    <label>FLO Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>