sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/Referral_Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>Referral_Lead_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referral Lead Created</description>
    <inlineHelpText>Referral Lead Created</inlineHelpText>
    <label>Referral Lead Created</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>