sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Status__c</fullName>
    <label>Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Converted to Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>