sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/Referred_Area__c.field-meta.xml
<CustomField>
    <fullName>Referred_Area__c</fullName>
    <label>Referred Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>