sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/Referred_Person__c.field-meta.xml
<CustomField>
    <fullName>Referred_Person__c</fullName>
    <label>Referred Person</label>
    <length>100</length>
    <type>Text</type>
</CustomField>