sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/Referred_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Referred_Phone_No__c</fullName>
    <label>Referred Phone No</label>
    <type>Phone</type>
</CustomField>