sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/resolved__c.field-meta.xml
<CustomField>
    <fullName>resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>resolved</label>
    <type>Checkbox</type>
</CustomField>