sfSandBoxCode/force-app/main/default/objects/Feedback__c/fields/SA_Assigned__c.field-meta.xml
<CustomField>
    <fullName>SA_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Associate Assigned</description>
    <inlineHelpText>Sales Associate Assigned</inlineHelpText>
    <label>SA Assigned</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>