sfSandBoxCode/force-app/main/default/objects/Feedback__c/recordTypes/FLO_Referrals.recordType-meta.xml
<RecordType>
    <fullName>FLO_Referrals</fullName>
    <active>true</active>
    <description>FLO Referrals</description>
    <label>FLO Referrals</label>
</RecordType>